--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
@@ -10,7 +11,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.7.3</version>
-        <relativePath />
+        <relativePath/>
     </parent>
     <groupId>fr.nubox</groupId>
     <artifactId>spring-pet-clinic</artifactId>
@@ -41,7 +42,6 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:git@github.com-perso:SBordier44/spring-pet-clinic.git</developerConnection>
-      <tag>spring-pet-clinic-0.0.3</tag>
-  </scm>
+        <developerConnection>scm:git:git@github.com:SBordier44/spring-pet-clinic.git</developerConnection>
+    </scm>
 </project>
