--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>fr.nubox</groupId>
     <artifactId>spring-pet-clinic</artifactId>
-    <version>0.0.4</version>
+    <version>0.0.5-SNAPSHOT</version>
     <name>spring-pet-clinic</name>
     <description>spring-pet-clinic</description>
     <properties>
@@ -41,6 +41,6 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:SBordier44/spring-pet-clinic.git</developerConnection>
-      <tag>spring-pet-clinic-0.0.4</tag>
+      <tag>HEAD</tag>
   </scm>
 </project>
